--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/estilos.css" />
+    <link rel="stylesheet" href="./css/estilos.css" />
     <title>Impeto Parabens</title>
 </head>
 
@@ -29,14 +29,14 @@
         </div>
 
         <div class="imagem">
-            <img src="/resources/undraw_birthday_cake_re_bsw5.svg">
+            <img src="./resources/undraw_birthday_cake_re_bsw5.svg">
         </div>
 
     </div>
 
 
 
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
