--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                 <div class="campos">
                     <label>Data de aniversário</label>
                     <input type="date" name="dataNascimento" > <br><br>
+                     <label>Data de aniversário</label>
+                    <input type="date" name="dataNascimento" > <br><br>
                     <label>Mensagem </label>
                     <input type="text" name="Mensagem" placeholder="opcional"> <br><br>
                     <button type="submit" class="enviar">Enviar SMS</button>
