mudando a paleta de cores parte 1

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
 
         <div class="imagem">
-            <img src="./resources/undraw_birthday_cake_re_bsw5.svg">
+            <img src="./resources/undraw_birthday_cake_re_bsw5 (1).svg">
         </div>
 
     </div>
