--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                 <div class="nomeForm">
                     <h1>Impeto Aniversários</h1>
                 </div>
-                <div class="campos"> 
+                <div class="campos">
                     <label>API Key</label>
                     <input type="text" name="apeikey" > <br><br>
                     <label>Data de aniversário</label>
                     <input type="date" name="dataNascimento" > <br><br>
                     <label>Mensagem </label>
-                    <textarea type="text" name="Mensagem"  placeholder="Mensagem pessoal (76 letras)"> <br><br>
+                    <input type="text" name="Mensagem" class="mensagem" placeholder="Mensagem pessoal (76 letras)"> <br><br>
                     <button type="submit" class="enviar">Enviar SMS</button>
                 </div>
             </form>
