--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <label>Data de aniversário</label>
                     <input type="date" name="dataNascimento" > <br><br>
                     <label>Mensagem </label>
-                    <input type="text" name="Mensagem" class="mensagem" placeholder="Mensagem pessoal (76 letras)"> <br><br>
+                    <input type="text" name="Mensagem"  placeholder="Mensagem pessoal (76 letras)"> <br><br>
                     <button type="submit" class="enviar">Enviar SMS</button>
                 </div>
             </form>
