--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/estilos.css" />
-    <title>Impeto Parabens</title>
+    <title>Niharu Parabens</title>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
         <div class='preencher'>
             <form>
                 <div class="nomeForm">
-                    <h1>Impeto Aniversários</h1>
+                    <h1>Niharu Aniversários</h1>
                 </div>
                 <div class="campos">
                     <label>API Key</label>
